== 3.0.0.alpha.13
* Fixing the neo4j:install rake task for systems without wget and Windows (#64, @ausmarton)
* Support for adding labels on existing nodes closes (#63)
* Session#query returns a hash for all values in a row (#61, @fiddur)

== 3.0.0.alpha.12
* Fixing find_nodes to not quote numeric values (#48)

== 3.0.0.alpha.11
* Added Basic Auth (HTTParty config) configuration on session (#58)
* Drop nil value on create (#56)

== 3.0.0.alpha.10
* Fix of data url in cypher session (#55)
* add escape sequence sanitization to cypher translator (#53)
* Handle update_props with nil value (#46)

== 3.0.0.alpha.9
* Support for RegExp search (#45)

== 3.0.0.alpha.8
* Support for Schema Constraints (#44)
* Fix for Rake Neo4j task (#43)

== 3.0.0.alpha.7
* Support for named sessions (#40, alex)
* Added method #update_props for Relationship and Node
* Added Neo4j::Relationship.create method

== 3.0.0.alpha.6
* Fixes for wrapper method on nodes needed by the neo4j 3.0 gem
	
== 3.0.0.alpha.5
* Better support for wrapping nodes, see Neo4j::Node::Wrapper

== 3.0.0.alpha.4
* Fix for cypher query, the wrapper hook method must be called to make neo4j gem happy

== 3.0.0.alpha.3
* Fix for cypher query where the column values was wrong

== 3.0.0.alpha.2
* Support for Neo4j 2.0.0 and the neo4j-community jar, removed includedd JAR files
* Simple Event support, notifying listener when database is started/usable
* Fix requirement for standalone neo4j-core Gem (#34, Kevin Hall)

== 3.0.0.alpha.1
* First test

== 2.3.0 / 2013-06-18
* Use 1.9 Neo4j Jars, (#29, Jannis)
* added ability to pass in params to Neo4j._query method (#28, kmussel)		
	
== 2.2.4 / 2013-05-19
* Fix for from.rels(...).to_other(to), #27
* Add support for Relationship#nodes accessor #25, David Butler
* Fix for NoMethodError on exception message for the []= property method, #24, Aish Aishfenton
* Made Neo4j.start threadsafe #23, David Butler
* Better logging for Java Exception #22, David Butler